Add report to show first instance of every blend, in order.

--- a/app/core/templates/core/reports/upcomingrunsreport/components.html
+++ b/app/core/templates/core/reports/upcomingrunsreport/components.html
@@ -8,7 +8,7 @@
         </div>
     {% else %}
         <div class='text-center'>
-            <h1>All Upcoming Runs for {{ item_info.item_code }} {{ item_info.item_description }}</h1>
+            <h1>All Upcoming Runs</h1>
         </div>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
