Add component_shrt link to blendshortages flag.

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -77,6 +77,9 @@
                                             <li><a class="dropdown-item" href="/core/create-report/Purchase-Orders/{{ item }}">
                                                 {{ item }} <em>(click to view PO's)</em>
                                             </a></li>
+                                            <li><a class="dropdown-item" href="/core/subcomponent-shortages/">
+                                                Component Shortages
+                                            </a></li>
                                         {% endfor %}
                                     </ul>
                                 {% endif %}
