--- a/app/core/templates/core/componentshortages.html
+++ b/app/core/templates/core/componentshortages.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}<title>Blend Shortages</title>{% endblock %}
+{% block title %}<title>Component Shortages</title>{% endblock %}
 
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendShortages.css' %}">
@@ -12,22 +12,14 @@
     <h1>Component Shortages</h1>
         <tr id="poRow">
             <td>
-                <label for="id_po_number">Filter By PO Number:</label>
+                <label for="id_filter_criteria">Filter:</label>
             </td>
             <td>
-                <input type="text" name="po_number" maxlength="100" required="" id="id_po_number" class="ui-autocomplete-input" autocomplete="off">
-            </td>
-        </tr>
-        <tr id="itemCodeRow">
-            <td>
-                <label for="id_item_code">Filter By Item Code:</label>
-            </td>
-            <td>
-                <input type="text" name="po_number" maxlength="100" required="" id="id_item_code_lookup" class="ui-autocomplete-input" autocomplete="off">
+                <input type="text" name="filter_criteria" maxlength="100" required="" id="id_filter_criteria" class="ui-autocomplete-input" autocomplete="off">
             </td>
         </tr>
         <div class="table-responsive-sm">
-            <table class="table text-left table-bordered table-hover" id="shortageTable">
+            <table class="table text-left table-bordered table-hover" id="displayTable">
                 <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                     <tr>
                         <th scope="col">Item</th>
@@ -43,7 +35,7 @@
                     </tr>
                 </thead>
                 {% for shortage in component_shortages %}
-                    <tr class="shortageRow">
+                    <tr class="filterableRow">
                         <td>{{ shortage.item_code }}</td>
                         <td>{{ shortage.po_number }}</td>
                         <td>{{ shortage.component_item_code }}</td>
