--- a/app/core/templates/core/subcomponentshortages.html
+++ b/app/core/templates/core/subcomponentshortages.html
@@ -13,14 +13,14 @@
     <h1>Blend Component Shortages</h1>
     <tr id="itemCodeRow">
         <td>
-            <label for="id_item_code">Filter By PO Number:</label>
+            <label for="id_filter_criteria">Filter:</label>
         </td>
         <td>
-            <input type="text" name="po_number" maxlength="100" required="" id="id_po_number" class="ui-autocomplete-input" autocomplete="off">
+            <input type="text" name="filter_criteria" maxlength="100" required="" id="id_filter_criteria" class="ui-autocomplete-input" autocomplete="off">
         </td>
     </tr>
         <div class="table-responsive-sm">
-            <table class="table text-left table-bordered" id="shortageTable">
+            <table class="table text-left table-bordered" id="displayTable">
                 <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                     <tr>
                         <th scope="col">Blend</th>
@@ -37,7 +37,7 @@
                     </tr>
                 </thead>
                 {% for shortage in subcomponent_shortages %}
-                    <tr class="shortageRow">
+                    <tr class="filterableRow">
                         <td>{{ shortage.component_item_code }}</td>
                         <td>{{ shortage.po_number }}</td>
                         <td>{{ shortage.subcomponent_item_code }}</td>
