Correct page heading.

--- a/app/core/templates/core/allchemlocations.html
+++ b/app/core/templates/core/allchemlocations.html
@@ -10,7 +10,7 @@
     
 
 {% block content %}
-    <h1>Blend Component Shortages</h1>
+    <h1>All Chemical Locations</h1>
     <tr id="itemCodeRow">
         <td>
             <label for="id_item_code">Filter:</label>
