--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -34,6 +34,7 @@
         <li><a class="dropdown-item" href="/core/upcoming-component-counts">Make A Component Count Sheet</a></li>
         <li><a class="dropdown-item" href="/core/count-records/">View All Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
+        <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
