Page titlle and login change to accomodate label room.

--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!-- Header Blocks -->
-{% block title %}<title>Inline Schedule</title>{% endblock %}
+{% block title %}<title>Production Schedule</title>{% endblock %}
 
 {% block scripts %} 
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
