Add MaxProducibleQty report to shortage flag.

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -80,6 +80,9 @@
                                             <li><a class="dropdown-item" href="/core/subcomponent-shortages/">
                                                 Component Shortages
                                             </a></li>
+                                            <li><a class="dropdown-item" href="/core/max-producible-quantity/">
+                                                Max Producible Quantity
+                                            </a></li>
                                         {% endfor %}
                                     </ul>
                                 {% endif %}
